--- a/ChoreBuddies.Frontend/wwwroot/index.html
+++ b/ChoreBuddies.Frontend/wwwroot/index.html
@@ -16,6 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css?v=@(MudBlazor.Metadata.Version)" rel="stylesheet" />
+    <link href="_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css" rel="stylesheet" />
 </head>
 
 <body>
